--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -334,6 +334,12 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomed",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Highlighted",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Should Filter Displays:",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories": "Excluded Quick Craft Categories:",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories.configure": "Configure...",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories.configure.title": "Configuring Quick Craft Categories",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories.configure.toggle": "Toggle",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories.configure.true": "Available for Quick Craft",
+  "config.roughlyenoughitems.filtering.excludedQuickCraftCategories.configure.false": "Excluded from Quick Craft",
   "config.roughlyenoughitems.filteringScreen": "Customized Filtering",
   "config.roughlyenoughitems.filteringRulesScreen": "Customized Filtering Rules",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Create Filtering Rule",
