add spacing options to REI favorites

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -131,6 +131,7 @@
   "text.rei.time_button.name.noon": "Noon",
   "text.rei.time_button.name.evening": "Evening",
   "text.rei.time_button.name.night": "Night",
+  "text.rei.spacing_button.tooltip.entry": "%s Whitespace",
   "text.rei.reload_config": "Reload Plugins",
   "text.rei.reload_search": "Reload Search",
   "text.rei.config.is.reloading": "Plugins are reloading!",
@@ -143,6 +144,8 @@
   "text.rei.weather.clear": "Clear",
   "text.rei.weather.rain": "Rain",
   "text.rei.weather.thunder": "Thunder",
+  "text.rei.spacing.line": "Line",
+  "text.rei.spacing.item": "Item",
   "text.rei.previous_category": "Previous Category",
   "text.rei.next_category": "Next Category",
   "text.rei.previous_page": "Previous Page",
@@ -183,6 +186,7 @@
   "favorite.section.gamemode": "Game Mode",
   "favorite.section.weather": "Weather",
   "favorite.section.time": "Time",
+  "favorite.section.spacing": "Spacing",
   "tooltip.rei.fluid_amount": "§7%d Unit",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Drag this up to add this to your favorites!",
