--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
@@ -87,9 +87,9 @@
   "text.rei.input.methods.bopomofo": "Bopomofo (Mandarin)",
   "text.rei.input.methods.bopomofo.description": "Die Eingabemethode um chinesische Zeichen mit Bopomofo (Mandarin) übereinzustimmen.",
   "text.rei.input.methods.hint": "Alternative Eingabemethoden sind für deine Sprache verfügbar.",
-  "text.rei.input.methods.hint.configure": "Konfigurieren",
-  "text.rei.input.methods.hint.ignore": "Ignorieren",
   "text.rei.input.methods.initializing": "Initialisiere Eingabemethoden",
+  "text.rei.hint.configure": "Konfigurieren",
+  "text.rei.hint.ignore": "Ignorieren",
   "ordering.rei.ascending": "Aufsteigend",
   "ordering.rei.descending": "Absteigend",
   "ordering.rei.registry": "Registrierung",
@@ -329,6 +329,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Vergrössert",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Hervorgehoben",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Soll Filter anzeigen:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Konfigurieren...",
   "config.roughlyenoughitems.filteringScreen": "Benutzerdefiniertes filtern",
   "config.roughlyenoughitems.filteringRulesScreen": "Benutzerdefinierte Filterregeln",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filterregel erstellen",
