--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_ud.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_ud.json
@@ -6,6 +6,9 @@
   "text.rei.cheating_enabled_no_perms": "§7(uoıssıɯɹǝԀ oN) §cpǝןqɐuƎ §7buıʇɐǝɥϽ",
   "text.rei.no_permission_cheat": "sɯǝʇı ʇɐǝɥɔ oʇ pǝɹınbǝɹ ǝɹɐ suoıssıɯɹǝd ɹoʇɐɹǝdO",
   "text.rei.search.field.suggestion": "˙˙˙ɥɔɹɐǝS",
+  "text.rei.config.menu.dark_theme": "ǝɯǝɥ┴ ʞɹɐp",
+  "text.rei.config.menu.craftable_filter": "ɹǝʇlᴉℲ ǝlqɐʇɟɐɹƆ",
+  "text.rei.config.menu.search_field.position": "...uoᴉʇᴉsoԀ plǝᴉℲ ɥɔɹɐǝS",
   "category.rei.crafting": "buıʇɟɐɹϽ",
   "category.rei.smelting": "buıʇןǝɯS",
   "category.rei.smelting.fuel": "ןǝnℲ",
