--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
@@ -74,9 +74,9 @@
   "text.rei.shapeless": "Sans forme",
   "text.rei.input.methods.default": "Par défaut",
   "text.rei.input.methods.hint": "Des méthodes de saisie alternatives sont disponibles pour votre langue.",
-  "text.rei.input.methods.hint.configure": "Configurer",
-  "text.rei.input.methods.hint.ignore": "Ignorer",
   "text.rei.input.methods.initializing": "Initialisation de la méthode d'entrée",
+  "text.rei.hint.configure": "Configurer",
+  "text.rei.hint.ignore": "Ignorer",
   "ordering.rei.ascending": "Croissant",
   "ordering.rei.descending": "Décroissant",
   "ordering.rei.registry": "Registre",
@@ -308,6 +308,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Zoomé",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Surligné",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Le Filtre Devrait Afficher :",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Configurer...",
   "config.roughlyenoughitems.filteringScreen": "Filtrage personnalisé",
   "config.roughlyenoughitems.filteringRulesScreen": "Règles de filtrage personnalisées",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Créer une règle de filtrage",
