--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/it_it.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/it_it.json
@@ -14,6 +14,7 @@
   "text.rei.support.me.patreon": "Dona su Patreon",
   "text.rei.support.me.bisect": "Usa il codice SHEDANIEL su BisectHosting",
   "text.rei.not.fully.initialized": "REI non è ancora completamente inizializzato!",
+  "text.rei.inventory.highlighting.enabled": "Evidenziamento dell'Inventario Abilitato",
   "category.rei.crafting": "Fabbricazione",
   "category.rei.smelting": "Fusione",
   "category.rei.smelting.fuel": "Carburante",
