--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
@@ -80,8 +80,12 @@
   "text.rei.input.methods": "入力方法",
   "text.rei.input.methods.default": "デフォルト",
   "text.rei.input.methods.default.description": "デフォルトの入力方法です。デフォルトでは検索キーワードを変換しません。",
-  "text.rei.input.methods.hint.ignore": "無視する",
+  "text.rei.input.methods.jyutping": "粤拼 (広東語)",
+  "text.rei.input.methods.pinyin": "拼音 (官話)",
+  "text.rei.input.methods.bopomofo": "注音符号 (官話)",
   "text.rei.input.methods.initializing": "入力方法をリセットする",
+  "text.rei.hint.configure": "設定",
+  "text.rei.hint.ignore": "無視する",
   "ordering.rei.ascending": "昇順",
   "ordering.rei.descending": "降順",
   "ordering.rei.registry": "アイテムID",
@@ -168,6 +172,10 @@
   "text.rei.changelog.error.missingChangelogFile": "更新履歴ログが見つかりません！",
   "text.rei.changelog.error.failedToReadChangelogFile": "更新履歴ログの読み込みに失敗しました！",
   "text.rei.collapsed.entry": "折りたたまれた項目: %s",
+  "text.rei.collapsed.entry.hint.expand": "Altキーで全ての %s を展開する (%d 個の項目)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Optionキーで全ての %s を展開する (%d 個の項目)",
+  "text.rei.collapsed.entry.hint.collapse": "Altキーで全ての %s を折りたたむ (%s 個の項目)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Optionキーで全ての %s を折りたたむ (%s 個の項目)",
   "favorite.section.gamemode": "ゲームモード",
   "favorite.section.weather": "天候",
   "favorite.section.time": "時間",
@@ -321,6 +329,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "ズームした",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "ハイライト表示",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "フィルターを表示する:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "設定...",
   "config.roughlyenoughitems.filteringScreen": "フィルタリングの設定",
   "config.roughlyenoughitems.filteringRulesScreen": "フィルタリングルールの変更",
   "config.roughlyenoughitems.filteringRulesScreen.new": "フィルタリングルールの追加",
