--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
@@ -86,9 +86,9 @@
   "text.rei.input.methods.bopomofo": "주음부호",
   "text.rei.input.methods.bopomofo.description": "주음부호 입력 방식입니다.",
   "text.rei.input.methods.hint": "언어에 따른 다른 입력 방식도 사용 가능합니다.",
-  "text.rei.input.methods.hint.configure": "구성",
-  "text.rei.input.methods.hint.ignore": "무시",
   "text.rei.input.methods.initializing": "입력 방식 초기화 중",
+  "text.rei.hint.configure": "구성",
+  "text.rei.hint.ignore": "무시",
   "ordering.rei.ascending": "오름차순",
   "ordering.rei.descending": "내림차순",
   "ordering.rei.registry": "레지스트리",
@@ -328,6 +328,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "확대/축소됨",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "강조됨",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "필터 표시:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "구성...",
   "config.roughlyenoughitems.filteringScreen": "사용자 정의 필터",
   "config.roughlyenoughitems.filteringRulesScreen": "사용자 정의 필터 규칙",
   "config.roughlyenoughitems.filteringRulesScreen.new": "필터링 규칙 생성",
