--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -62,6 +62,7 @@
   "category.rei.wax_scraping": "Raspagem",
   "category.rei.oxidizing": "Oxidação",
   "category.rei.oxidation_scraping": "Desoxidação",
+  "category.rei.tag": "Tag",
   "category.rei.information": "Informações",
   "text.rei.composting.chance": "§e%d%% de chances",
   "text.rei.composting.page": "Pág. %d",
@@ -71,6 +72,7 @@
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
   "text.rei.accepts": "Aceita:",
+  "text.rei.tag_accept": "Tag: #%s",
   "text.rei.missing": "Faltando o seguinte:",
   "text.rei.performance": "Análise de desempenho",
   "text.rei.addons": "Complementos do REI",
@@ -85,9 +87,9 @@
   "text.rei.input.methods.bopomofo": "Bopomofo (Mandarim)",
   "text.rei.input.methods.bopomofo.description": "O meio de entrada para caracteres chineses correspondentes ao Bopomofo (Mandarim)",
   "text.rei.input.methods.hint": "Meios de entrada alternativos estão disponíveis para seu idioma.",
-  "text.rei.input.methods.hint.configure": "Configurar",
-  "text.rei.input.methods.hint.ignore": "Ignorar",
   "text.rei.input.methods.initializing": "Inicializando Meio de Entrada",
+  "text.rei.hint.configure": "Configurar",
+  "text.rei.hint.ignore": "Ignorar",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Descrescente",
   "ordering.rei.registry": "Registro",
@@ -98,6 +100,7 @@
   "text.auto_craft.move_items.yog": "Gerar NullPointerException!",
   "text.rei.expand.view": "Abrir Vista Expandida",
   "text.rei.expand.view.close": "Fechar Vista Expandida",
+  "text.rei.tag.copy.clipboard": "Salvar árvore de tags na área de transferência",
   "error.rei.transfer.too_small": "Não é possível mover os itens para uma grade %dx%d.",
   "error.rei.not.on.server": "O REI não está no servidor.",
   "error.rei.not.enough.materials": "Matéria-prima insuficiente.",
@@ -173,6 +176,10 @@
   "text.rei.changelog.error.missingChangelogFile": "Registro ausente!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler o log!",
   "text.rei.collapsed.entry": "Entrada colapsada: %s",
+  "text.rei.collapsed.entry.hint.expand": "Alt-Clique para expandir todos os %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Opção-Clique para expandir todos os %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.collapse": "Clique-Alt para recolher todos os %s (%d entradas)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Opção-Clique para recolher todos os %s (%d entradas)",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
   "favorite.section.time": "Tempo",
@@ -244,6 +251,7 @@
   "config.roughlyenoughitems.accessibility.entrySize": "Tamanho da entrada:",
   "config.roughlyenoughitems.search.asyncSearch": "Pesquisa assíncrona:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamanho de partição da pesquisa assíncrona:",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Falha de encadeamento assíncrono de patch:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Guias compactas:",
   "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Flechas compactas:",
   "config.roughlyenoughitems.theme": "Tema:",
@@ -326,6 +334,7 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Ampliado",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Realçado",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Exibir filtros:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Configurar...",
   "config.roughlyenoughitems.filteringScreen": "Filtro personalizado",
   "config.roughlyenoughitems.filteringRulesScreen": "Regras de filtros personalizados",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Criar regra para filtro",
