--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -78,11 +78,22 @@
   "text.rei.addons": "Дополнения REI",
   "text.rei.shapeless": "Бесформенные",
   "text.rei.input.methods": "Методы ввода",
+  "text.rei.input.methods.reload.progress": "Прогресс: %s%%",
   "text.rei.input.methods.default": "По умолчанию",
   "text.rei.input.methods.default.description": "Стандартный метод ввода. Это не переобразоовает поисковой запрос.",
+  "text.rei.input.methods.jyutping": "Цзютпин (кантонский)",
   "text.rei.input.methods.jyutping.description": "Метод ввода соответствует Китайским символам с Ютпхин (Кантон)",
-  "text.rei.input.methods.hint.configure": "Настроить",
-  "text.rei.input.methods.hint.ignore": "Игнорировать",
+  "text.rei.input.methods.pinyin": "Пиньинь (мандарин)",
+  "text.rei.input.methods.pinyin.description": "Метод ввода для сопоставления китайских иероглифов с пиньинь (мандаринским языком).",
+  "text.rei.input.methods.bopomofo": "Бопомофо (мандарин)",
+  "text.rei.input.methods.bopomofo.description": "Метод ввода для сопоставления китайских иероглифов с бопомофо (мандаринским).",
+  "text.rei.input.methods.pinyin.double": "Двойной пиньинь (мандаринский)",
+  "text.rei.input.methods.pinyin.double.description": "Метод ввода для сопоставления китайских иероглифов с двойным пиньином (мандаринским).",
+  "text.rei.input.methods.pinyin.double.scheme": "Схема двойного пиньина...",
+  "text.rei.input.methods.pinyin.double.scheme.sougou": "SouGou",
+  "text.rei.input.methods.pinyin.double.scheme.microsoft": "Microsoft",
+  "text.rei.input.methods.pinyin.double.scheme.pinyinpp": "Пиньинь++",
+  "text.rei.input.methods.pinyin.double.scheme.xiaohe": "XiaoHe",
   "text.rei.input.methods.initializing": "Запускается метод ввода",
   "ordering.rei.ascending": "По возрастанию",
   "ordering.rei.descending": "По убыванию",
