--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -78,18 +78,31 @@
   "text.rei.addons": "REI 插件",
   "text.rei.shapeless": "无序合成",
   "text.rei.input.methods": "输入法",
+  "text.rei.input.methods.reload.progress": "进度：%s%%",
   "text.rei.input.methods.default": "预设",
   "text.rei.input.methods.default.description": "默认的输入法。这不会改变搜索词。",
   "text.rei.input.methods.jyutping": "粤拼（粤语）",
   "text.rei.input.methods.jyutping.description": "用粤拼（粤语）匹配字符的输入法。",
   "text.rei.input.methods.pinyin": "拼音（中文）",
   "text.rei.input.methods.pinyin.description": "用拼音（中文）匹配字符的输入法。",
+  "text.rei.input.methods.pinyin.fuzzy.matching": "模糊音...",
   "text.rei.input.methods.bopomofo": "注音（中文）",
   "text.rei.input.methods.bopomofo.description": "用注音（中文）匹配字符的输入法。",
+  "text.rei.input.methods.pinyin.double": "双拼（中文）",
+  "text.rei.input.methods.pinyin.double.description": "用双拼（中文）匹配字符的输入法。",
+  "text.rei.input.methods.pinyin.double.scheme": "双拼键位方案...",
+  "text.rei.input.methods.pinyin.double.scheme.sougou": "搜狗双拼",
+  "text.rei.input.methods.pinyin.double.scheme.microsoft": "微软双拼",
+  "text.rei.input.methods.pinyin.double.scheme.pinyinpp": "拼音加加双拼",
+  "text.rei.input.methods.pinyin.double.scheme.xiaohe": "小鹤双拼",
+  "text.rei.input.methods.pinyin.double.scheme.natural": "自然码双拼",
   "text.rei.input.methods.hint": "您的语言可以使用其他的输入法。",
-  "text.rei.input.methods.hint.configure": "配置",
-  "text.rei.input.methods.hint.ignore": "忽略",
   "text.rei.input.methods.initializing": "正在初始化输入法",
+  "text.rei.input.methods.tooltip.hints": "显示工具提示",
+  "text.rei.hint.input.methods": "恭喜您设置了一个输入法！\n你可以透过搜索过滤器按钮重新配置！",
+  "text.rei.hint.favorites.discover": "你刚刚移除了一个收藏项！\n你可以点击这里的 + 按钮再次新增！",
+  "text.rei.hint.configure": "配置",
+  "text.rei.hint.ignore": "忽略",
   "ordering.rei.ascending": "顺序",
   "ordering.rei.descending": "倒序",
   "ordering.rei.registry": "物品ID循序",
@@ -334,6 +347,12 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "缩放",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "加亮",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "应过滤显示：",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "快速合成分类:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "配置...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "配置快速合成分类",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "切换",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "可用于快速合成",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "不可用于快速合成",
   "config.roughlyenoughitems.filteringScreen": "自定义过滤器",
   "config.roughlyenoughitems.filteringRulesScreen": "自定义过滤规则",
   "config.roughlyenoughitems.filteringRulesScreen.new": "创建过滤规则",
@@ -347,6 +366,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "显示/隐藏：",
   "rule.roughlyenoughitems.filtering.search.show.true": "显示",
   "rule.roughlyenoughitems.filtering.search.show.false": "隐藏",
+  "rule.roughlyenoughitems.filtering.basic": "基础插件过滤器",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "通过 REI 插件筛选条目，这在此处不可配置。",
   "language.roughlyenoughitems.english": "英语",
   "language.roughlyenoughitems.japanese": "日语",
   "language.roughlyenoughitems.chinese_simplified": "简体中文",
