--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -61,7 +61,7 @@
   "category.rei.waxing": "上蠟",
   "category.rei.wax_scraping": "除蠟",
   "category.rei.oxidizing": "氧化反應",
-  "category.rei.oxidation_scraping": "刮除氧化層",
+  "category.rei.oxidation_scraping": "除鏽",
   "category.rei.tag": "標籤",
   "category.rei.information": "資訊",
   "text.rei.composting.chance": "§e%d%% 的機率",
@@ -78,18 +78,31 @@
   "text.rei.addons": "REI 附加功能",
   "text.rei.shapeless": "無序合成",
   "text.rei.input.methods": "輸入法",
+  "text.rei.input.methods.reload.progress": "進度：%s%%",
   "text.rei.input.methods.default": "預設",
   "text.rei.input.methods.default.description": "預設的輸入法。這不會改變搜尋詞。",
   "text.rei.input.methods.jyutping": "粵拼（粵語）",
   "text.rei.input.methods.jyutping.description": "用粵拼（粵語）匹配字元的輸入法。",
   "text.rei.input.methods.pinyin": "拼音（中文）",
   "text.rei.input.methods.pinyin.description": "用拼音（中文）匹配字元的輸入法。",
+  "text.rei.input.methods.pinyin.fuzzy.matching": "模糊音...",
   "text.rei.input.methods.bopomofo": "注音（中文）",
   "text.rei.input.methods.bopomofo.description": "用注音（中文）匹配字元的輸入法。",
+  "text.rei.input.methods.pinyin.double": "雙拼（中文）",
+  "text.rei.input.methods.pinyin.double.description": "用雙拼（中文）匹配字元的輸入法。",
+  "text.rei.input.methods.pinyin.double.scheme": "雙拼鍵位方案...",
+  "text.rei.input.methods.pinyin.double.scheme.sougou": "搜狗雙拼",
+  "text.rei.input.methods.pinyin.double.scheme.microsoft": "微軟雙拼",
+  "text.rei.input.methods.pinyin.double.scheme.pinyinpp": "拼音加加雙拼",
+  "text.rei.input.methods.pinyin.double.scheme.xiaohe": "小鶴雙拼",
+  "text.rei.input.methods.pinyin.double.scheme.natural": "自然碼雙拼",
   "text.rei.input.methods.hint": "你所選擇的語言可以使用其他的輸入法。",
-  "text.rei.input.methods.hint.configure": "設定",
-  "text.rei.input.methods.hint.ignore": "忽略",
   "text.rei.input.methods.initializing": "正在初始化輸入法",
+  "text.rei.input.methods.tooltip.hints": "顯示工具提示",
+  "text.rei.hint.input.methods": "恭喜你設置了一個輸入法！\n你可以使用搜索過濾器按鈕重新設定！",
+  "text.rei.hint.favorites.discover": "你剛剛移除了一個我的最愛項！\n你可以點擊這裡的 + 按鈕再次新增至我的最愛！",
+  "text.rei.hint.configure": "設定",
+  "text.rei.hint.ignore": "忽略",
   "ordering.rei.ascending": "從 A 到 Z",
   "ordering.rei.descending": "從 Z 到 A",
   "ordering.rei.registry": "註冊名",
@@ -249,8 +262,9 @@
   "config.roughlyenoughitems.filteredEntries.show": "顯示所選",
   "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "請先載入世界！",
   "config.roughlyenoughitems.accessibility.entrySize": "物品大小：",
-  "config.roughlyenoughitems.search.asyncSearch": "非同步搜尋：",
-  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "非同步搜尋分區大小：",
+  "config.roughlyenoughitems.search.asyncSearch": "異步搜尋：",
+  "config.roughlyenoughitems.search.asyncSearchPartitionSize": "異步搜尋分區大小：",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "異步線程崩潰補丁：",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "簡潔分類標籤：",
   "config.roughlyenoughitems.accessibility.useCompactTabButtons": "簡潔分類分頁按鍵：",
   "config.roughlyenoughitems.theme": "外觀主題：",
@@ -333,6 +347,12 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "縮放",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "螢光",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "應過濾顯示：",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "快速合成排除項：",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "設定...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "配置快速合成類別",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "切換",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "可用於快速合成",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "不可用於快速合成",
   "config.roughlyenoughitems.filteringScreen": "自訂篩選",
   "config.roughlyenoughitems.filteringRulesScreen": "自訂篩選條件",
   "config.roughlyenoughitems.filteringRulesScreen.new": "建立篩選規則",
@@ -346,6 +366,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "顯示 / 隱藏：",
   "rule.roughlyenoughitems.filtering.search.show.true": "顯示",
   "rule.roughlyenoughitems.filtering.search.show.false": "隱藏",
+  "rule.roughlyenoughitems.filtering.basic": "一般插件篩選",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "按 REI 插件過濾條目，這在此處不可設定。",
   "language.roughlyenoughitems.english": "英文",
   "language.roughlyenoughitems.japanese": "日文",
   "language.roughlyenoughitems.chinese_simplified": "簡體中文",
