--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_gb.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_gb.json
@@ -1,8 +1,37 @@
 {
   "text.rei.cheating": "Cheating",
+  "text.rei.cheating_disabled": "§7Cheating Disabled",
+  "text.rei.cheating_enabled": "§cCheating Enabled",
+  "text.rei.cheating_limited_enabled": "§bCheating Enabled (Using Commands)",
+  "text.rei.cheating_enabled_no_perms": "§7Cheating §cEnabled §7(No Permission)",
+  "text.rei.cheating_limited_creative_enabled": "§aCheating Enabled (Using Creative)",
+  "text.rei.no_permission_cheat": "Operator permissions are required to cheat items",
+  "text.rei.search.field.suggestion": "Search...",
+  "text.rei.feedback": "Any feedback you want to give to the REI developer? %s to submit your feedback!",
+  "text.rei.feedback.link": "Click me to visit the Google Form",
+  "text.rei.support.me": "Support me to continue making REI better!",
+  "text.rei.support.me.desc": "As a patreon supporter of REI, you get to use the latest version of REI for Minecraft snapshots.\nAlternatively, you can also support me financially through renting a BisectHosting server.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Donate on Patreon",
+  "text.rei.support.me.bisect": "Use code SHEDANIEL on BisectHosting",
   "text.rei.not.fully.initialized": "REI not yet fully initialised!",
+  "text.rei.not.fully.initialized.tooltip": "Missing stages: %s\nIf this does not go away,\ntry looking for support with the logs!",
   "text.rei.inventory.highlighting.enabled": "Inventory Highlighting On",
   "text.rei.inventory.highlighting.enabled.tooltip": "This makes slots that does not match\nthe search filter grey.\nDouble click the search bar to toggle this mode.",
+  "text.rei.caching.search": "REI caching search results...",
+  "text.rei.caching.search.step": "Step %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "Dark Theme",
+  "text.rei.config.menu.craftable_filter": "Craftable Filter",
+  "text.rei.config.menu.display": "Display Settings...",
+  "text.rei.config.menu.display.remove_recipe_book": "Remove Recipe Book",
+  "text.rei.config.menu.display.left_side_mob_effects": "Left Side Mob Effects",
+  "text.rei.config.menu.display.left_side_panel": "Left Side Panel",
+  "text.rei.config.menu.display.scrolling_side_panel": "Scrolling Side Panel",
+  "text.rei.config.menu.display.caching_entry_rendering": "Caching Entry Rendering",
+  "text.rei.config.menu.display.side_search_field": "Side Search Field",
+  "text.rei.config.menu.display.syntax_highlighting": "Syntax Highlighting",
+  "text.rei.config.menu.config": "More Options...",
+  "text.rei.config.menu.search_field.position": "Search Field Position...",
+  "text.rei.config.menu.search_field.input_method": "Input Methods...",
   "category.rei.crafting": "Crafting",
   "category.rei.smelting": "Smelting",
   "category.rei.smelting.fuel": "Fuel",
@@ -11,9 +40,12 @@
   "category.rei.fuel.time.items": "Burn Time: %s item(s)",
   "category.rei.fuel.time_short": "%d ticks",
   "category.rei.fuel.time_short.items": "%s item(s)",
+  "category.rei.cooking.xp": "%f XP",
+  "category.rei.cooking.time&xp": "%s XP in %s sec",
   "category.rei.smoking": "Smoking",
   "category.rei.blasting": "Blasting",
   "category.rei.campfire": "Campfire",
+  "category.rei.campfire.time": "%s sec",
   "category.rei.stone_cutting": "Stone Cutting",
   "category.rei.brewing": "Brewing",
   "category.rei.brewing.input": "Original Potion",
@@ -26,19 +58,82 @@
   "category.rei.beacon_payment": "Beacon Payment",
   "category.rei.tilling": "Tilling",
   "category.rei.pathing": "Pathing",
+  "category.rei.waxing": "Waxing",
+  "category.rei.wax_scraping": "Wax Scraping",
+  "category.rei.oxidizing": "Oxidising",
+  "category.rei.oxidation_scraping": "Oxidation Scraping",
+  "category.rei.tag": "Tag",
   "category.rei.information": "Information",
+  "text.rei.composting.chance": "§e%d%% Chance",
+  "text.rei.composting.page": "Page %d",
   "text.rei.config": "Config",
+  "text.rei.config_tooltip": "Open Config Screen\n§7Shift-Click to toggle cheat mode",
+  "text.rei.cheat_items": "Gave [{item_name}§f] x{item_count} to {player_name}.",
+  "text.rei.failed_cheat_items": "§cFailed to give items.",
+  "text.rei.too_long_nbt": "§cItem NBT is too long to be applied in multiplayer.",
+  "text.rei.accepts": "Accepts following:",
+  "text.rei.tag_accept": "Tag: #%s",
+  "text.rei.missing": "Missing following:",
   "text.rei.performance": "Performance Analysis",
+  "text.rei.addons": "REI Addons",
+  "text.rei.shapeless": "Shapeless",
+  "text.rei.input.methods": "Input Methods",
+  "text.rei.input.methods.reload.progress": "Progress: %s%%",
+  "text.rei.input.methods.default": "Default",
+  "text.rei.input.methods.default.description": "The default input method. This does not transform the search term.",
+  "text.rei.input.methods.jyutping": "Jyutping (Cantonese)",
+  "text.rei.input.methods.jyutping.description": "The input method for matching Chinese characters with Jyutping (Cantonese).",
+  "text.rei.input.methods.pinyin": "Pinyin (Mandarin)",
+  "text.rei.input.methods.pinyin.description": "The input method for matching Chinese characters with Pinyin (Mandarin).",
+  "text.rei.input.methods.bopomofo": "Bopomofo (Mandarin)",
+  "text.rei.input.methods.bopomofo.description": "The input method for matching Chinese characters with Bopomofo (Mandarin).",
+  "text.rei.input.methods.hint": "Alternative input methods are available for your language.",
+  "text.rei.input.methods.initializing": "Initialising Input Method",
   "ordering.rei.ascending": "Ascending",
   "ordering.rei.descending": "Descending",
+  "ordering.rei.registry": "Registry",
+  "ordering.rei.name": "Name",
+  "text.rei.next_category": "Next Category",
+  "text.rei.previous_page": "Previous Page",
+  "text.rei.next_page": "Next Page",
+  "text.rei.back": "Back",
+  "text.rei.select": "Select",
   "text.rei.favorites": "Favourites",
   "text.rei.favorites_tooltip": " \n§7Press %s to add this to favourites.",
   "text.rei.remove_favorites_tooltip": " \n§7Press %s to remove this from favourites.",
+  "text.rei.working_station": "Working Station",
+  "text.rei.release_export": "Release %s to export",
+  "text.rei.ask_to_export": "Do you wish to export \"%s\"?",
+  "text.rei.ask_to_export.subtitle": "This will export %d displays as images.",
+  "text.rei.recipe_id": "\n%sRecipe Id: %s",
+  "text.rei.recipe_screen_type.selection": "Recipe Screen Type Selection",
+  "text.rei.recipe_screen_type.selection.sub": "You can always edit this setting again via the config screen.",
+  "text.rei.jei_compat": "JEI Compatibility Layer",
+  "text.rei.jei_compat.false": "JEI Compatibility Layer: Disabled",
+  "text.rei.jei_compat.true": "JEI Compatibility Layer: Enabled",
+  "text.rei.jei_compat.sub": "Do you wish to enable the JEI compatibility layer %s§7?\n§7It would allow loading JEI plugins from these sources:\n%s\n\n§7However REI's JEI Compatibility is not perfect, and issues may prevail.\n§cUSE AT YOUR OWN RISK!",
+  "text.rei.jei_compat.sub.stability": "§c§l(ALPHA)",
+  "text.rei.view_recipes_for": "View Recipes for %s",
+  "text.rei.subsets": "Subsets",
+  "text.rei.tiny_potato": "Tiny Potatoz",
+  "text.rei.add_favorite_widget": "Add...",
+  "text.rei.dispose_here": "Dispose Here",
+  "text.rei.crash.title": "REI Crashed!",
+  "text.rei.crash.description": "§cRoughly Enough Item just experienced a crash during \"%s\".\n\n§fDetails of the crashed are displayed below. Please identify the mod that caused the crash and report it to the mod author, alongside the crash log provided below.\n\nIf you believe this crash is caused by a bug in Roughly Enough Item, please report it to our issue tracker.\n\n§6Thanks for your help!\n",
+  "text.rei.crash.crash_report": "Open Crash Report",
+  "text.rei.changelog.title": "REI Changelog",
+  "text.rei.changelog.error.missingChangelogFile": "Missing changelog File!",
+  "tooltip.rei.drag_to_add_favorites": "§7Drag this up to add this to your favourites!",
   "config.roughlyenoughitems.favoritesEnabled": "Favourites Enabled:",
   "config.roughlyenoughitems.keyBindings.favoriteKeybind": "Favourite Entry:",
+  "config.roughlyenoughitems.motion.favoritesAnimation": "Favourites Animated:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favourites Add Widget Button:",
   "config.roughlyenoughitems.search.searchFavorites": "Search Filter in Favourites:",
   "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Append Favourites Hint:",
+  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "Horizontal Favourites Boundaries:",
+  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Favourites Columns Limit:",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Colourful",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Colourful (Underscored)",
+  "config.roughlyenoughitems.filteringScreen": "Customised Filtering",
   "config.roughlyenoughitems.filteringRulesScreen": "Customised Filtering Rules"
 }
