--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -34,6 +34,7 @@
   "text.rei.config.menu.config": "More Options...",
   "text.rei.config.menu.search_field.position": "Search Field Position...",
   "text.rei.config.menu.search_field.input_method": "Input Methods...",
+  "text.rei.config.menu.search_field.hide_entry_panel_idle": "Hide Entries when not Searching",
   "category.rei.crafting": "Crafting",
   "category.rei.smelting": "Smelting",
   "category.rei.smelting.fuel": "Fuel",
@@ -334,6 +335,9 @@
   "config.roughlyenoughitems.scrollingEntryListWidget": "Entry List Action:",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.true": "Scrolled",
   "config.roughlyenoughitems.scrollingEntryListWidget.boolean.false": "Paginated",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle": "Entry List When Not Searching:",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.true": "Invisible",
+  "config.roughlyenoughitems.hideEntryPanelIfIdle.boolean.false": "Visible",
   "config.roughlyenoughitems.horizontalEntriesBoundaries": "Horizontal Entries Boundaries:",
   "config.roughlyenoughitems.verticalEntriesBoundaries": "Vertical Entries Boundaries:",
   "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Entries Columns Limit:",
